Reading appsettings.json file

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,3 +1,7 @@
 {
-  "audUsdExchangeRate": 0.7
+  "audUsdExchangeRate": 0.7,
+  "filePaths": {
+    "Humphries": ".\\humphries.csv",
+    "Megacorp": ".\\megacorp.json"
+  }
 }
